--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container">
     <div class="heading">
-    <h1 class="title" style="margin-top: 25px;">Yugi-oh! 2048</h1>
+    <h1 class="title" style="margin-top: 25px;">Yugi-oh! <br> 2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
