--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
         </div>
-      </div>
+      </div></div>
 </div>
   </div>
 </body>
