--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<link rel="stylesheet" id="css" type="text/css" href="style/jurrack.css">
+<link rel="stylesheet" id="css" type="text/css" href="style/dioses.css">
 
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
